# renameimage

./: README.md  pyproject.toml
app/: __main__.py
tests/: test_renameimage.py
