[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renameimage"
version = "0.1.0"
description = "A tool to rename images based on EXIF data or modification time."
readme = "README.md"
authors = [
    { name = "Jules", email = "jules@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "exifread",
]

[project.urls]
"Homepage" = "https://github.com/example/renameimage"
